# bang

./: LICENSE.txt  README.md  bang.py  bang_test.py  pyproject.toml  setup.py
bang/: __init__.py  __main__.py  bangfile.py  compat.py  config.py  decorators.py  echo.py  event.py  generator.py  md.py  path.py  server.py  skeleton.py  types.py  utils.py
bang/data/project/: bangfile.py
bang/data/project/input/blog-post/: This is a Blog Post.md  post.md
bang/data/project/input/ref/: index.md
bang/data/project/input/static-page/: index.md
bang/data/ref/input/ref/: page.md
bang/data/ref/input/ref/_embed/: twitter.json
bang/data/themes/default/: bangfile.py
bang/data/themes/default/input/assets/: html.css  project.css  template.css
bang/data/themes/default/template/: aux.html  macros.html  master.html  master_amp.html  page.html  pages.html
bang/data/themes/default/template/amp/: amp.css  macros.html  master.html  page.html
bang/data/themes/default/template/body/: page.html  pages.html
bang/md/: __init__.py  md.py
bang/md/extensions/: __init__.py  absolutelink.py  delins.py  domevent.py  embed.py  footnote.py  highlight.py  image.py  magicref.py  reference.py
bang/plugins/: amp.py  assets.py  blog.py  favicon.py  feed.py  googleanalytics.py  indexone.py  opengraph.py  ref.py  sitemap.py
bang/plugins/breadcrumbs/: __init__.py
bang/plugins/breadcrumbs/data/template/: breadcrumbs.html
bang/plugins/breadcrumbs/data/themes/breadcrumbs/template/: breadcrumbs.html  master.html
bang/plugins/ref/: __init__.py
docs/: BANGFILE.md  EVENTS.md  MARKDOWN.md  PLUGINS.md  STRUCTURE.md  THEMES.md
tests/: __init__.py  bang_test.py  config_test.py  decorators_test.py  event_test.py  md_test.py  path_test.py  plugins_test.py  types_test.py  utils_test.py
tests/plugins/: amp_test.py  blog_test.py  plugins_test.py
