[project]
requires-python = ">=3.10"
description = "A static site generator"
authors = [
  { name = "Jay Marcyes", email = "jay@marcyes.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "Jinja2",
  "Markdown",
  "requests",
  "datatypes"
]
readme = "README.md"
license = { file = "LICENSE.txt" }

[project.urls]
Homepage = "http://github.com/jaymon/bang"
Repository = "https://github.com/Jaymon/bang"

[project.scripts]
bang = "bang.__main__:console"

[build-system]
requires = [
  "setuptools>=62.3.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [
  "tests*",
  "example*",
  "*_test*",
  "docs*"
]

