[project]
requires-python = ">=3.10"
description = "A static site generator"
authors = [
  { name = "Jay Marcyes", email = "jay@marcyes.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "Jinja2==3.1.5",
  "Markdown==3.4.3",
  "requests==2.32.2",
  "datatypes"
]
name = "bangtext"
dynamic = [
  "version"
]
readme = "README.md"
license = { file = "LICENSE.txt" }

[project.urls]
Homepage = "http://github.com/jaymon/bang"
Repository = "https://github.com/Jaymon/bang"

[project.scripts]
bang = "bang.__main__:console"

[build-system]
requires = [
  "setuptools>=62.3.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [
  "tests*",
  "example*",
  "*_test*",
  "docs*"
]
include = [
  "bang*"
]

[tool.setuptools.dynamic]
version = { attr = "bang.__version__" }

# https://setuptools.pypa.io/en/latest/userguide/datafiles.html#subdirectory-for-data-files
[tool.setuptools.package-data]
"bang.data" = [
  "data/*",
]
"bang.plugins.breadcrumbs.data" = [
  "plugins/breadcrumbs/data/*"
]

